# SustainaTrendTm

./: .env  .gitignore  .replit  .replit.new  ARCHITECTURE.md  README.md  WIREFRAME-UI.md  additional_doc1.txt  app.py  application_overview.html  auto_launch.py  auto_start.py  consolidated_app.py  cookies.txt  copilot.html  curl_output.txt  dashboard_output.html  direct_app.py  document_upload.html  gunicorn.conf.py  initialize_mongodb.py  jsconfig.json  package-lock.json  package.json  push_to_github.sh  pyproject.toml  query  remove_service.bat  replit.nix  requirements.txt  run-fastapi.py  run-flask.py  run.py  run_app.bat  run_frontend.sh  run_storytelling_api.sh  screenshot.py  setup.py  setup_autostart.bat  simple-start.sh  (+37 more)
.replit-workflows/: Chart Recommendation Demo.toml  Dashboard.toml  Document Upload.toml  Refactored Dashboard.toml  Regulatory AI Dashboard.toml  Regulatory Dashboard.toml  Run Refactored Dashboard.toml  Run Sustainability Dashboard.toml  Run Sustainability Platform.toml  Simple Dashboard.toml  Start Dashboard.toml  Start Minimal Dashboard.toml  Start Refactored App.toml  Start Refactored Dashboard.toml  Start Standalone Dashboard.toml  Storytelling Demo.toml  flask-dashboard.toml  test_standalone_dashboard.toml
.svelte-kit/: ambient.d.ts
attached_assets/: Pasted--Critical-Assessment-of-Dcycle-io-and-How-SustainaTrend-Can-Build-a-Moat-Using-AI-Life-Cyc-1742199617004.txt  Pasted-ConnectionError-redis-exceptions-ConnectionError-Error-99-connecting-to-localhost-6379-Cannot-assi-1740656393543.txt  Pasted-New-UI-Component-Created-for-SustainaTrend-Strategy-Hub-Here-is-a-modular-React-component-that-can-1742115680647.txt  Pasted-Prompt-Data-Based-Storytelling-Integration-for-SustainaTrend-UI-Objective-Integrate-data-based-st-1741719835575.txt  Pasted-Step-1-Clarify-the-Repurposing-Goal-You-want-to-repurpose-the-existing-SustainaTrend-platform-to--1743229731805.txt  Pasted-Step-4-Keep-Utilities-Utility-Route-Purpose-debug-Route-verification-and-debugging-internal-use--1741814392230.txt  Pasted-Thank-you-for-your-thoughtful-feedback-I-m-glad-the-plan-resonates-with-your-vision-for-enhancing-t-1742039762919.txt  Pasted-To-transform-the-Strategy-Hub-into-an-AI-driven-management-consulting-platform-we-can-employ-chain--1742038174452.txt  _vc-insights_startup-assessment.html  _vc-insights_upload-thesis.html
backend/: __init__.py  create_stories_table.py  database.py  logging.conf  main.py  migrate.ts  models.py  port_manager.py  requirements-sustainability.txt  run_api.py  seed_database.py  simple_api.py  start.sh  storytelling_api.py  sustainability_api.py  test_db_connection.py
backup_scripts/: simple-start.sh
config/: .env.example  config.py  logging.conf  requirements.txt
docs/: README.md
frontend/: __init__.py  ai_code_automation_example.py  ai_development_tools.py  app.py  benchmark_db.py  clean_app.py  clean_app.py.bak  cleaned_routes.py  company_search.py  direct_app.py  direct_app.py.patch  document_processor.py  document_query_api.py  dump.rdb  enhanced_search.py  esrs_framework.py  ethical_ai.py  flask_log.txt  gemini_search.py  gunicorn.conf.py  initialize_pinecone.py  list_routes.py  minimal.py  monetization_strategies.py  mongo_client.py  mongo_metrics.py  mongo_stories.py  mongo_trends.py  navigation_config.py  routes.py  (+31 more)
(+653 files in other folders)
