[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.8",
    "flask-caching>=2.3.1",
    "flask==2.3.3",
    "flask-sqlalchemy>=3.1.1",
    "httpx>=0.28.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.6",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.38",
    "uvicorn==0.34.0",
    "celery>=5.4.0",
    "flask-socketio>=5.5.1",
    "eventlet>=0.39.0",
    "gunicorn>=23.0.0",
    "redis>=5.2.1",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dash==2.9.3",
    "dash-bootstrap-components>=1.7.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "requests>=2.32.3",
    "langchain>=0.3.19",
    "openai>=1.65.0",
    "numpy>=1.26.4",
    "beautifulsoup4>=4.13.3",
    "google-generativeai>=0.8.4",
    "google-api-python-client>=2.162.0",
    "bokeh>=3.6.3",
]
