[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sustainatrend"
version = "0.1.0"
description = "A comprehensive sustainability trend analysis and storytelling platform"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "SustainaTrend Team", email = "team@sustainatrend.com" }
]
dependencies = [
    "pymongo==4.6.1",
    "chromadb==0.4.22",
    "python-dotenv==1.0.1",
    "numpy==1.26.3",
    "pandas==2.1.4",
    "logging==0.4.9.6",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
